--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "axios": "^1.4.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "expo-asset": "^8.10.1",
     "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "mongoose": "^7.0.5",
     "next": "^13.5.6",
     "next-auth": "^4.22.1",
