--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.4.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "leaflet": "^1.9.4",
     "mongoose": "^7.0.5",
     "next": "13.3.1",
     "next-auth": "^4.22.1",
@@ -25,11 +26,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-leaflet": "^4.2.1",
     "react-query": "^3.39.3",
     "typescript": "5.0.4"
   },
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
+    "@types/leaflet": "^1.9.7",
+    "@types/react-leaflet": "^3.0.0",
     "tailwindcss": "^3.3.1"
   }
 }
