--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "expo-asset": "^8.10.1",
+    "geolocation": "^0.0.0",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "mongoose": "^7.0.5",
