--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "eslint-config-next": "13.3.1",
     "expo-asset": "^8.10.1",
     "geolocation": "^0.0.0",
+    "i18next": "^23.6.0",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "mongoose": "^7.0.5",
     "next": "^13.5.6",
     "next-auth": "^4.22.1",
+    "next-international": "^1.1.3",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
