--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^2.0.4",
     "@heroicons/react": "^1.0.6",
     "@hookform/error-message": "^2.0.1",
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "@types/node": "18.16.0",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
@@ -23,11 +25,12 @@
     "i18next": "^23.6.0",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
-    "leaflet": "^1.9.4",
+    "mongodb": "^6.2.0",
     "mongoose": "^7.0.5",
     "next": "^13.5.6",
     "next-auth": "^4.22.1",
     "next-international": "^1.1.3",
+    "nodemailer": "^6.9.7",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
