--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,21 @@
-version: '3.2'
+version: '3'
 
 services:
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+      - "443:443"
+    restart: always
+    volumes:
+      - ./data/nginx:/etc/nginx/conf.d/:ro
+      - ./data/certbot/conf:/etc/letsencrypt/:ro
+      - ./data/certbot/www:/var/www/certbot/:ro
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - ./data/certbot/conf:/etc/letsencrypt/:rw
+      - ./data/certbot/www:/var/www/certbot/:rw
   ts-node-docker:
     build:
       context: .
@@ -10,7 +25,7 @@ services:
       - ./src:/home/node/app/src
     container_name: ts-node-docker
     expose:
-      - '8080'
+      - '8443'
     ports:
-      - '8080:3000'
+      - '8443:3000'
     command: npm run dev
