--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "i18next": "^23.6.0",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
+    "leaflet-realtime": "^2.2.0",
     "mongodb": "^6.2.0",
     "mongoose": "^7.0.5",
     "next": "^13.5.6",
