--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^2.0.4",
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.13.0",
     "@heroicons/react": "^1.0.6",
     "@hookform/error-message": "^2.0.1",
     "@next-auth/mongodb-adapter": "^1.1.3",
@@ -18,6 +20,7 @@
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "cloudinary": "^1.41.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "expo-asset": "^8.10.1",
