--- a/package.json
+++ b/package.json
@@ -25,18 +25,22 @@
     "expo-asset": "^8.10.1",
     "geolocation": "^0.0.0",
     "i18next": "^23.6.0",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.4.2",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "leaflet-realtime": "^2.2.0",
     "mongoose": "^7.0.5",
     "next": "^13.5.6",
     "next-auth": "^4.22.1",
+    "next-i18next": "^15.0.0",
     "next-international": "^1.1.3",
     "nodemailer": "^6.9.7",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-i18next": "^13.5.0",
     "react-leaflet": "^4.2.1",
     "react-query": "^3.39.3",
     "typescript": "5.0.4"
