--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^1.0.6",
     "@hookform/error-message": "^2.0.1",
     "@next-auth/mongodb-adapter": "^1.1.3",
+    "@sentry/nextjs": "^7.81.1",
     "@types/node": "18.16.0",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
