--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "client-only": "^0.0.1",
     "cloudinary": "^1.41.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
@@ -46,6 +47,7 @@
   },
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
+    "@types/gtag.js": "^0.0.18",
     "@types/leaflet": "^1.9.7",
     "@types/react-leaflet": "^3.0.0",
     "tailwindcss": "^3.3.1"
