--- a/package.json
+++ b/package.json
@@ -59,7 +59,10 @@
     "eslint-plugin-testing-library": "^6.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "msw": "^2.0.10",
+    "node-mocks-http": "^1.13.0",
     "tailwindcss": "^3.3.1",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.1",
+    "whatwg-fetch": "^3.6.19"
   }
 }
