--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "react-hook-form": "^7.43.9",
     "react-i18next": "^13.5.0",
     "react-leaflet": "^4.2.1",
+    "react-markdown": "^9.0.1",
     "react-query": "^3.39.3",
+    "remark-gfm": "^4.0.0",
     "typescript": "5.0.4"
   },
   "devDependencies": {
