--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8080",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress:open": "cypress open",
+    "test": "cross-env NODE_ENV=test  next dev -p 8080"
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
@@ -37,6 +39,8 @@
     "@hookform/devtools": "^4.3.1",
     "@types/leaflet": "^1.9.7",
     "@types/react-leaflet": "^3.0.0",
+    "cross-env": "^7.0.3",
+    "cypress": "^13.6.1",
     "tailwindcss": "^3.3.1"
   }
 }
