--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@cloudinary/react": "^1.11.2",
     "@cloudinary/url-gen": "^1.13.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^1.0.6",
     "@hookform/error-message": "^2.0.1",
     "@next-auth/mongodb-adapter": "^1.1.3",
@@ -45,6 +47,7 @@
     "react-markdown": "^9.0.1",
     "react-query": "^3.39.3",
     "remark-gfm": "^4.0.0",
+    "swagger-ui-react": "^5.10.3",
     "typescript": "5.0.4"
   },
   "devDependencies": {
