--- a/package.json
+++ b/package.json
@@ -48,15 +48,20 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.5",
+    "@babel/preset-env": "^7.23.5",
     "@hookform/devtools": "^4.3.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
     "@types/gtag.js": "^0.0.18",
+    "@types/jest": "^29.5.11",
     "@types/leaflet": "^1.9.7",
     "@types/react-leaflet": "^3.0.0",
+    "babel-jest": "^29.7.0",
     "eslint-plugin-jest-dom": "^5.1.0",
     "eslint-plugin-testing-library": "^6.2.0",
+    "esm": "^3.2.25",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "msw": "^2.0.10",
